server/compilers/goLiteJS/src/test/ml1/valid/inc1.go
// inc and dec statement support
package main

func main(){
    x++
    y--
}
