server/compilers/goLiteJS/src/test/ml1/invalid/dec2.go
// dec in expression
package main

func main() {
    y = x--
}
